# swagger.json
@@ -2223,6 +2223,86 @@
         }
       }
     },
+    "/api/v1/registers/firearms/export": {
+      "get": {
+        "tags": [
+          "Registers"
+        ],
+        "parameters": [
+          {
+            "name": "from",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "date"
+            }
+          },
+          {
+            "name": "to",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "date"
+            }
+          },
+          {
+            "name": "format",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/RegisterExportFormat"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/v1/registers/safe-custody/export": {
+      "get": {
+        "tags": [
+          "Registers"
+        ],
+        "parameters": [
+          {
+            "name": "from",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "date"
+            }
+          },
+          {
+            "name": "to",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "date"
+            }
+          },
+          {
+            "name": "format",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/RegisterExportFormat"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/api/v1/sage/connections": {
       "get": {
         "tags": [
@@ -3052,12 +3132,7 @@
         "additionalProperties": false
       },
       "AppRole": {
-        "enum": [
-          0,
-          1,
-          2,
-          3
-        ],
+        "enum": [0, 1, 2, 3],
         "type": "integer",
         "format": "int32"
       },
@@ -3540,21 +3615,12 @@
         "additionalProperties": false
       },
       "BookingSource": {
-        "enum": [
-          0,
-          1
-        ],
+        "enum": [0, 1],
         "type": "integer",
         "format": "int32"
       },
       "BookingStatus": {
-        "enum": [
-          0,
-          1,
-          2,
-          3,
-          4
-        ],
+        "enum": [0, 1, 2, 3, 4],
         "type": "integer",
         "format": "int32"
       },
@@ -4274,10 +4340,7 @@
         "additionalProperties": false
       },
       "CustomerType": {
-        "enum": [
-          0,
-          1
-        ],
+        "enum": [0, 1],
         "type": "integer",
         "format": "int32"
       },
@@ -4344,15 +4407,7 @@
         "additionalProperties": false
       },
       "DayOfWeek": {
-        "enum": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6
-        ],
+        "enum": [0, 1, 2, 3, 4, 5, 6],
         "type": "integer",
         "format": "int32"
       },
@@ -4361,11 +4416,7 @@
         "format": "double"
       },
       "DepositMode": {
-        "enum": [
-          0,
-          1,
-          2
-        ],
+        "enum": [0, 1, 2],
         "type": "integer",
         "format": "int32"
       },
@@ -4450,10 +4501,7 @@
         "additionalProperties": false
       },
       "FirearmOrigin": {
-        "enum": [
-          0,
-          1
-        ],
+        "enum": [0, 1],
         "type": "integer",
         "format": "int32"
       },
@@ -4533,12 +4581,7 @@
         "additionalProperties": false
       },
       "FirearmStatus": {
-        "enum": [
-          0,
-          1,
-          2,
-          3
-        ],
+        "enum": [0, 1, 2, 3],
         "type": "integer",
         "format": "int32"
       },
@@ -4785,13 +4828,7 @@
         "additionalProperties": false
       },
       "InvoiceStatus": {
-        "enum": [
-          0,
-          1,
-          2,
-          3,
-          4
-        ],
+        "enum": [0, 1, 2, 3, 4],
         "type": "integer",
         "format": "int32"
       },
@@ -4981,12 +5018,7 @@
         "additionalProperties": false
       },
       "LicenceStatus": {
-        "enum": [
-          0,
-          1,
-          2,
-          3
-        ],
+        "enum": [0, 1, 2, 3],
         "type": "integer",
         "format": "int32"
       },
@@ -5193,13 +5225,7 @@
         "additionalProperties": false
       },
       "PaymentMethod": {
-        "enum": [
-          0,
-          1,
-          2,
-          3,
-          4
-        ],
+        "enum": [0, 1, 2, 3, 4],
         "type": "integer",
         "format": "int32"
       },
@@ -5228,7 +5254,9 @@
             "nullable": true
           }
         },
-        "additionalProperties": { }
+        "additionalProperties": {
+
+        }
       },
       "PublicBookingConfirmationResponse": {
         "type": "object",
@@ -5557,6 +5585,11 @@
           }
         },
         "additionalProperties": false
+      },
+      "RegisterExportFormat": {
+        "enum": [0, 1],
+        "type": "integer",
+        "format": "int32"
       },
       "RegisterRowDto": {
         "type": "object",
@@ -5953,11 +5986,7 @@
         "additionalProperties": false
       },
       "StorageStatus": {
-        "enum": [
-          0,
-          1,
-          2
-        ],
+        "enum": [0, 1, 2],
         "type": "integer",
         "format": "int32"
       },
@@ -6237,8 +6266,8 @@
   },
   "security": [
     {
-      "Bearer": [ ],
-      "ApiKey": [ ]
+      "Bearer": [],
+      "ApiKey": []
     }
   ]
 }
